# POKEMON-EMERALD-G9-PROJECT

./: .gitattributes  .gitignore  BPEE.ld  CMakeLists.txt  README.md  build.bat  bytereplacement  hooks  linker.ld  linker_next.ld  m.py  offsets.ini  repoints  routinepointers
scripts/: build.py  insert.py  make.py
src/: TrainerAi.c  abcd.c  abcd.s  ability_desc.s  ability_effects.c  ability_names.s  accuracycalc.c  allocnewstruct.c  asm_defines.s  battle_animations.c  battle_animations.s  battle_locations.h  battle_strings.c  battle_structs.h  battle_system.c  battle_system_part2.c  battleanimbackgrounds.s  battleorder_calc.c  battlescripts.c  battlescripts_for_moves.s  battlescritps.s  bs_start_attack.c  bscommands_updated.c  config.h  cppdefines.h  critcalc.c  custom_battles.c  custom_battles.s  damagecalc.c  defines.h  display_mega_symbols.c  double_wild_battles.c  egg_moves.c  embargo_hook.s  gen7_new_move_effect.c  graphics_related.c  helper_functions.c  illusion_hook.s  item_effects.c  lastdamageadjustment.c  (+21 more)
src/MoreAbilities/: Funcs.c  MoreAbilities.c
src/anim_bg/: bg_image.s  bg_image_pallet.s  move_background_ids.s
src/anim_particle/: particle_ids.s  particle_image.s  particle_pallet.s
src/defines/: abilities.h  anim_macros.s  battle_structs_cpp.h  bs_commands.s  item_effects.h  items.h  moves.h  pokes.h  tai_commands.s
src/megaimages/: mega_trigger.h
